--- a/PythonIntro_SIB.tex
+++ b/PythonIntro_SIB.tex
@@ -352,7 +352,7 @@ Methods are normally accessed like \texttt{obj.method()} and attributes
 by \texttt{obj.attribute} (the difference is one has \texttt{()} and the
 other doesn't).
 
-\begin{tcolorbox}[enhanced jigsaw, rightrule=.15mm, toprule=.15mm, opacitybacktitle=0.6, opacityback=0, colback=white, breakable, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, arc=.35mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, toptitle=1mm, titlerule=0mm, coltitle=black, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, opacityback=0, toprule=.15mm, coltitle=black, leftrule=.75mm, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, titlerule=0mm, arc=.35mm, bottomrule=.15mm, rightrule=.15mm, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toptitle=1mm, left=2mm, colbacktitle=quarto-callout-note-color!10!white]
 
 In Python you can't actually get the length of a string using
 \texttt{"ACT1".length}, and you are required to use the inbuilt function
@@ -569,7 +569,7 @@ m
 I
 \end{verbatim}
 
-\begin{tcolorbox}[enhanced jigsaw, rightrule=.15mm, toprule=.15mm, opacitybacktitle=0.6, opacityback=0, colback=white, breakable, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, arc=.35mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, toptitle=1mm, titlerule=0mm, coltitle=black, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, opacityback=0, toprule=.15mm, coltitle=black, leftrule=.75mm, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, titlerule=0mm, arc=.35mm, bottomrule=.15mm, rightrule=.15mm, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toptitle=1mm, left=2mm, colbacktitle=quarto-callout-note-color!10!white]
 
 You can remove a variable in python using \texttt{del\ varname}.
 
@@ -727,7 +727,7 @@ loop is a list - you should use a \textbf{list comprehension}! The
 reason to do this is because they are more efficient and quicker to do
 the same analysis than a loop.
 
-\begin{tcolorbox}[enhanced jigsaw, rightrule=.15mm, toprule=.15mm, opacitybacktitle=0.6, opacityback=0, colback=white, breakable, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, arc=.35mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, toptitle=1mm, titlerule=0mm, coltitle=black, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, opacityback=0, toprule=.15mm, coltitle=black, leftrule=.75mm, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, titlerule=0mm, arc=.35mm, bottomrule=.15mm, rightrule=.15mm, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toptitle=1mm, left=2mm, colbacktitle=quarto-callout-note-color!10!white]
 
 There are also generators, dictionary and set comprehensions - read more
 about it
@@ -781,7 +781,7 @@ is it faster??
 
 \begin{verbatim}
 For loop time: 0.0142 secs
-List comprehension time: 0.0141 secs
+List comprehension time: 0.0140 secs
 \end{verbatim}
 
 The reason is list comprehensions essentially run the iterations at a
@@ -1536,7 +1536,7 @@ Model Family:                Gaussian   Df Model:                            1
 Link Function:               identity   Scale:                          17963.
 Method:                          IRLS   Log-Likelihood:                -2525.8
 Date:                Wed, 30 Apr 2025   Deviance:                   7.1492e+06
-Time:                        15:38:29   Pearson chi2:                 7.15e+06
+Time:                        15:51:45   Pearson chi2:                 7.15e+06
 No. Iterations:                     3   Pseudo R-squ. (CS):           0.002870
 Covariance Type:            nonrobust                                         
 ==============================================================================
@@ -1714,8 +1714,8 @@ multiprocessing}\label{tip-12-you-can-parallelise-your-code-using-multiprocessin
 \end{Shaded}
 
 \begin{verbatim}
-Single-threaded time: 1.22 seconds
-Parallel execution time: 1.87 seconds
+Single-threaded time: 1.18 seconds
+Parallel execution time: 2.01 seconds
 Do the results match? Yes
 \end{verbatim}
 
