--- a/PythonIntro_SIB.tex
+++ b/PythonIntro_SIB.tex
@@ -352,7 +352,7 @@ Methods are normally accessed like \texttt{obj.method()} and attributes
 by \texttt{obj.attribute} (the difference is one has \texttt{()} and the
 other doesn't).
 
-\begin{tcolorbox}[enhanced jigsaw, opacityback=0, toprule=.15mm, coltitle=black, leftrule=.75mm, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, titlerule=0mm, arc=.35mm, bottomrule=.15mm, rightrule=.15mm, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toptitle=1mm, left=2mm, colbacktitle=quarto-callout-note-color!10!white]
+\begin{tcolorbox}[enhanced jigsaw, titlerule=0mm, coltitle=black, left=2mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, arc=.35mm, leftrule=.75mm, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, opacitybacktitle=0.6, opacityback=0, breakable, rightrule=.15mm, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, colback=white]
 
 In Python you can't actually get the length of a string using
 \texttt{"ACT1".length}, and you are required to use the inbuilt function
@@ -569,7 +569,7 @@ m
 I
 \end{verbatim}
 
-\begin{tcolorbox}[enhanced jigsaw, opacityback=0, toprule=.15mm, coltitle=black, leftrule=.75mm, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, titlerule=0mm, arc=.35mm, bottomrule=.15mm, rightrule=.15mm, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toptitle=1mm, left=2mm, colbacktitle=quarto-callout-note-color!10!white]
+\begin{tcolorbox}[enhanced jigsaw, titlerule=0mm, coltitle=black, left=2mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, arc=.35mm, leftrule=.75mm, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, opacitybacktitle=0.6, opacityback=0, breakable, rightrule=.15mm, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, colback=white]
 
 You can remove a variable in python using \texttt{del\ varname}.
 
@@ -727,7 +727,7 @@ loop is a list - you should use a \textbf{list comprehension}! The
 reason to do this is because they are more efficient and quicker to do
 the same analysis than a loop.
 
-\begin{tcolorbox}[enhanced jigsaw, opacityback=0, toprule=.15mm, coltitle=black, leftrule=.75mm, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, titlerule=0mm, arc=.35mm, bottomrule=.15mm, rightrule=.15mm, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toptitle=1mm, left=2mm, colbacktitle=quarto-callout-note-color!10!white]
+\begin{tcolorbox}[enhanced jigsaw, titlerule=0mm, coltitle=black, left=2mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, arc=.35mm, leftrule=.75mm, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, opacitybacktitle=0.6, opacityback=0, breakable, rightrule=.15mm, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, colback=white]
 
 There are also generators, dictionary and set comprehensions - read more
 about it
@@ -780,8 +780,8 @@ is it faster??
 \end{Shaded}
 
 \begin{verbatim}
-For loop time: 0.0142 secs
-List comprehension time: 0.0140 secs
+For loop time: 0.0141 secs
+List comprehension time: 0.0139 secs
 \end{verbatim}
 
 The reason is list comprehensions essentially run the iterations at a
@@ -1168,9 +1168,15 @@ Pi rounded to 1 decimal: 3.1
 1.23e+05
 \end{verbatim}
 
-Remember when printing floats:\\
-- \texttt{.3f} = 3 decimal places. - \texttt{.3g} = 3 significant
-figures.
+Remember when printing floats:
+
+\begin{itemize}
+\tightlist
+\item
+  \texttt{.3f} = 3 decimal places.
+\item
+  \texttt{.3g} = 3 significant figures.
+\end{itemize}
 
 \texttt{np} is also better for doing mathematical functions across
 vectors and things like matrix maths.
@@ -1179,10 +1185,18 @@ vectors and things like matrix maths.
 matplotlib can probably do most of what you
 want.}\label{tip-10-several-packages-exist-for-plotting-seaborn-and-matplotlib-can-probably-do-most-of-what-you-want.}
 
-In general there are three popular libraries:\\
-- Matplotlib (basic, customisable, but more work needed to build plots)
-- most similar to base R plotting - Seaborn (easy, beautiful defaults) -
-most similar to ggplot2 - Plotly (interactive) - also exists in R!
+In general there are three popular libraries:
+
+\begin{itemize}
+\tightlist
+\item
+  Matplotlib (basic, customisable, but more work needed to build plots)
+  - most similar to base R plotting
+\item
+  Seaborn (easy, beautiful defaults) - most similar to ggplot2
+\item
+  Plotly (interactive) - also exists in R!
+\end{itemize}
 
 The dataset I will use is the data I generated earlier in this document
 - it contains 2 samples of KO and 2 samples of WT with count data from
@@ -1536,7 +1550,7 @@ Model Family:                Gaussian   Df Model:                            1
 Link Function:               identity   Scale:                          17963.
 Method:                          IRLS   Log-Likelihood:                -2525.8
 Date:                Wed, 30 Apr 2025   Deviance:                   7.1492e+06
-Time:                        15:51:45   Pearson chi2:                 7.15e+06
+Time:                        15:58:42   Pearson chi2:                 7.15e+06
 No. Iterations:                     3   Pseudo R-squ. (CS):           0.002870
 Covariance Type:            nonrobust                                         
 ==============================================================================
@@ -1714,8 +1728,8 @@ multiprocessing}\label{tip-12-you-can-parallelise-your-code-using-multiprocessin
 \end{Shaded}
 
 \begin{verbatim}
-Single-threaded time: 1.18 seconds
-Parallel execution time: 2.01 seconds
+Single-threaded time: 1.36 seconds
+Parallel execution time: 1.82 seconds
 Do the results match? Yes
 \end{verbatim}
 
